refactor: 총구매액 계산 로직 삭제
총구매액 계산 로직을 Order에서 삭제한다.